--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2024"
 [dependencies]
 rand = "0.9.1"
 image = "0.25.6"
+serde = { version = "1.0.219", features = ["derive"] }
+toml = "0.9.5"
