--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 [camera]
-look_from = [250.5, 250.5, -500.0]
+look_from = [250.5, 250.5, -280.0]
 look_at = [250.5, 250.5, 500.0]
 # view_up = [0.0, 0.5, 0.0]
 # image_width = 800
@@ -7,7 +7,7 @@ look_at = [250.5, 250.5, 500.0]
 vertical_fov = 90.0
 # defocus_angle = 0.0
 # focus_dist = 10.0
-# samples_per_pixel = 50
+samples_per_pixel = 30
 max_ray_range = 2000.0
 # max_depth = 50
 background_color = [0.0, 0.0, 0.0]
@@ -76,3 +76,26 @@ v = [0.0, 0.0, 100.0]
 type = "diffuse_light"
 color = [1.0, 1.0, 1.0]
 strength = 20.0
+
+[[objects]]
+type = "translate"
+offset = [-200.0, 0.0, 0.0]
+[objects.instance]
+type = "cube"
+a = [265.0, 0.0, 295.0]
+b = [430.0, 330.0, 460.0]
+[objects.instance.material]
+type = "lambertian"
+[objects.instance.material.texture]
+type = "solid"
+color = [0.8, 0.8, 0.8]
+
+[[objects]]
+type = "cube"
+a = [130.0, 0.0, 65.0]
+b = [295.0, 165.0, 230.0]
+[objects.material]
+type = "lambertian"
+[objects.material.texture]
+type = "solid"
+color = [0.8, 0.8, 0.8]
